--- a/index.html
+++ b/index.html
@@ -160,22 +160,29 @@
         #aladin-map { position: relative; }
         .al-zoom {
           position: absolute;
-          top: 10px;
-          right: 10px;
+          bottom: 12px;
+          right: 12px;
           display: flex;
-          gap: 6px;
-          z-index: 6;
+          flex-direction: column; /* üst üste */
+          gap: 8px;
+          z-index: 1000; /* canvas'ın üstünde kalsın */
+          pointer-events: auto; /* tıklanabilir */
         }
         .al-zoom .al-btn {
-          width: 36px;
-          height: 36px;
+          width: 38px;
+          height: 38px;
           padding: 0;
           line-height: 1;
           font-size: 18px;
           display: flex;
           align-items: center;
           justify-content: center;
+          border-radius: 10px;
+          background: rgba(0,0,0,0.5);
+          border: 1px solid rgba(255,255,255,0.25);
+          box-shadow: 0 2px 8px rgba(0,0,0,0.35);
         }
+        .al-legend { pointer-events: none; }
     </style>
 </head>
 <body class="antialiased">
@@ -1297,11 +1304,13 @@
                 if (!__aladin) return;
                 const f = getFovSafe();
                 setFovSafe(f / step); // + => zoom in (FoV küçülür)
+                console.log('[zoom +] from', f, 'to', getFovSafe());
               });
               outBtn.addEventListener('click', () => {
                 if (!__aladin) return;
                 const f = getFovSafe();
                 setFovSafe(f * step); // − => zoom out (FoV büyür)
+                console.log('[zoom −] from', f, 'to', getFovSafe());
               });
             }
 
